@@ -2304,23 +2304,31 @@ jerror_t JApplication::AttachPlugins(void)
 		bool found_plugin=false;
 		for(unsigned int i=0; i< pluginPaths.size(); i++){
 			string fullpath = pluginPaths[i] + "/" + plugin;
+			if(printPaths) jout<<"Looking for \""<<fullpath<<"\" ...."; cout.flush();
 			ifstream f(fullpath.c_str());
 			if(f.is_open()){
 				f.close();
-				if(RegisterSharedObject(fullpath.c_str())==NOERROR)found_plugin=true;
-				break;
+				if(printPaths) jout<<"found." << endl;
+				if(RegisterSharedObject(fullpath.c_str(), printPaths)==NOERROR){
+					found_plugin=true;
+					break;
+				}
 			}
-			if(printPaths) jout<<"Looking for \""<<fullpath<<"\" ...."<<"no"<<endl;
+			if(printPaths) jout<<"Failed to attach \""<<fullpath<<"\""<<endl;
 			
 			if(fullpath[0] != '/')continue;
 			fullpath = pluginPaths[i] + "/" + plugins[j] + "/" + plugin;
+			if(printPaths) jout<<"Looking for \""<<fullpath<<"\" ...."; cout.flush();
 			f.open(fullpath.c_str());
 			if(f.is_open()){
 				f.close();
-				if(RegisterSharedObject(fullpath.c_str())==NOERROR)found_plugin=true;
-				break;
+				if(printPaths) jout<<"found." << endl;
+				if(RegisterSharedObject(fullpath.c_str(), printPaths)==NOERROR){
+					found_plugin=true;
+					break;
+				}
 			}
-			if(printPaths) jout<<"Looking for \""<<fullpath<<"\" ...."<<"no"<<endl;
+			if(printPaths) jout<<"Failed to attach \""<<fullpath<<"\""<<endl;
 		}
 		
 		// If we didn't find the plugin, then complain and quit
